@@ -1,4 +1,5 @@
 0.08
+ - Add doc for Wikibase::Datatype::Print::MediainfoStatement.
  - Add error check to Wikibase::Datatype::Print::Value::Time.
 
 0.07 2023-04-17T11:50:54+02:00
